// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Albums Album.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "albums/id1",
    },
  ],
]
`;

exports[`Albums Album.getSeveral 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "market": "CH",
      },
      "url": "albums",
    },
  ],
]
`;

exports[`Albums NewReleases.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "UA",
        "limit": 1,
        "offset": 1,
      },
      "url": "browse/new-releases",
    },
  ],
]
`;

exports[`Albums Tracks.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "albums/id1/tracks",
    },
  ],
]
`;

exports[`Albums UsersSaved.check 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/albums/contains",
    },
  ],
]
`;

exports[`Albums UsersSaved.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "me/albums",
    },
  ],
]
`;

exports[`Albums UsersSaved.remove 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/albums",
    },
  ],
]
`;

exports[`Albums UsersSaved.save 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/albums",
    },
  ],
]
`;

exports[`Artists Album.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "include_groups": "album,appears_on,compilation,single",
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "artists/id1/albums",
    },
  ],
]
`;

exports[`Artists Artist.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "artists/id1",
    },
  ],
]
`;

exports[`Artists Artist.getSeveral 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "artists",
    },
  ],
]
`;

exports[`Artists RelatedArtists.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "artists/id1/related-artists",
    },
  ],
]
`;

exports[`Artists TopTracks.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "artists/id1/top-tracks",
    },
  ],
]
`;

exports[`Categories getSeveralCategories 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "CH",
        "limit": 1,
        "locale": "de_DE",
        "offset": 1,
      },
      "url": "browse/categories",
    },
  ],
]
`;

exports[`Categories getSingleCategory 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "CH",
        "locale": "de_DE",
      },
      "url": "browse/categories/id1",
    },
  ],
]
`;

exports[`Episodes Episode.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "episodes/id1",
    },
  ],
]
`;

exports[`Episodes Episode.getSeveral 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "market": "CH",
      },
      "url": "episodes",
    },
  ],
]
`;

exports[`Episodes UsersSaved.check 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/episodes/contains",
    },
  ],
]
`;

exports[`Episodes UsersSaved.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "me/episodes",
    },
  ],
]
`;

exports[`Episodes UsersSaved.remove 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/episodes",
    },
  ],
]
`;

exports[`Episodes UsersSaved.save 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/episodes",
    },
  ],
]
`;

exports[`Genres getAvailableGenreSeeds 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "recommendations/available-genre-seeds",
    },
  ],
]
`;

exports[`Markets getAvailableMarkets 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "markets",
    },
  ],
]
`;

exports[`Player getAvailableDevices 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "me/player/devices",
    },
  ],
]
`;

exports[`Player getPlaybackState 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "additional_types": "track,episode",
        "market": "CH",
      },
      "url": "me/player",
    },
  ],
]
`;

exports[`Player transferPlayback 1`] = `
[
  [
    {
      "data": {
        "device_ids": [
          "id1",
        ],
        "play": true,
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "url": "me/player",
    },
  ],
]
`;

exports[`Playlists addPlaylistItems 1`] = `
[
  [
    {
      "data": {
        "position": 0,
        "uris": "spotify:track:1,spotify:episode:2",
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "POST",
      "url": "playlists/id1/tracks",
    },
  ],
]
`;

exports[`Playlists changePlaylist 1`] = `
[
  [
    {
      "data": {
        "collaborative": true,
        "description": "new description",
        "name": "new playlist",
        "public": false,
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "url": "playlists/id1",
    },
  ],
]
`;

exports[`Playlists createPlaylist 1`] = `
[
  [
    {
      "data": {
        "collaborative": true,
        "description": "new description",
        "name": "playlist",
        "public": false,
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "POST",
      "url": "users/id1/playlists",
    },
  ],
]
`;

exports[`Playlists getCategoryPlaylists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "UA",
        "limit": 1,
        "offset": 1,
      },
      "url": "browse/categories/id1/playlists",
    },
  ],
]
`;

exports[`Playlists getCurrentUsersPlaylists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "offset": 1,
      },
      "url": "me/playlists",
    },
  ],
]
`;

exports[`Playlists getFeaturedPlaylists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "UA",
        "limit": 1,
        "locale": "sv_SE",
        "offset": 1,
        "timestamp": "2014-10-23T09:00:00",
      },
      "url": "browse/featured-playlists",
    },
  ],
]
`;

exports[`Playlists getPlaylist 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "additional_types": "track,episode",
        "fields": "total,limit",
        "market": "CH",
      },
      "url": "playlists/id1",
    },
  ],
]
`;

exports[`Playlists getPlaylistCoverImage 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "playlists/id1/images",
    },
  ],
]
`;

exports[`Playlists getPlaylistItems 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "additional_types": "track,episode",
        "fields": "total,limit",
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "playlists/id1/tracks",
    },
  ],
]
`;

exports[`Playlists getUsersPlaylists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "offset": 1,
      },
      "url": "users/id1/playlists",
    },
  ],
]
`;

exports[`Playlists removePlaylistItems 1`] = `
[
  [
    {
      "data": {
        "snapshot_id": "id1",
        "tracks": [
          {
            "uri": "spt:track:1",
          },
        ],
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "url": "playlists/id1/tracks",
    },
  ],
]
`;

exports[`Playlists reorderPlaylistItems 1`] = `
[
  [
    {
      "data": {
        "insert_before": 1,
        "range_length": 1,
        "range_start": 1,
        "snapshot_id": "snapshot_id",
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "url": "playlists/id1/tracks",
    },
  ],
]
`;

exports[`Playlists replacePlaylistItems 1`] = `
[
  [
    {
      "data": {
        "uris": "spotify:track:1,spotify:episode:2",
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "url": "playlists/id1/tracks",
    },
  ],
]
`;

exports[`Search Search.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "q": "x",
        "type": "track,album,artist,episode",
      },
      "url": "search",
    },
  ],
]
`;

exports[`Shows Episodes.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "shows/id1/episodes",
    },
  ],
]
`;

exports[`Shows Show.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "shows/id1",
    },
  ],
]
`;

exports[`Shows Show.getSeveral 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "market": "CH",
      },
      "url": "shows",
    },
  ],
]
`;

exports[`Shows UsersSaved.check 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/shows/contains",
    },
  ],
]
`;

exports[`Shows UsersSaved.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "offset": 1,
      },
      "url": "me/shows",
    },
  ],
]
`;

exports[`Shows UsersSaved.remove 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/shows",
    },
  ],
]
`;

exports[`Shows UsersSaved.save 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/shows",
    },
  ],
]
`;

exports[`Tracks AudioAnalysis.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "audio-analysis/id1",
    },
  ],
]
`;

exports[`Tracks AudioFeatures.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "audio-features/id1",
    },
  ],
]
`;

exports[`Tracks AudioFeatures.getSeveral 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "audio-features",
    },
  ],
]
`;

exports[`Tracks Recommendations.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "seed_artists": "",
        "seed_genres": "",
        "seed_tracks": "",
      },
      "url": "recommendations",
    },
  ],
]
`;

exports[`Tracks Track.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "tracks/id1",
    },
  ],
]
`;

exports[`Tracks Track.getSeveral 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "market": "CH",
      },
      "url": "tracks",
    },
  ],
]
`;

exports[`Tracks UsersSaved.check 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/tracks/contains",
    },
  ],
]
`;

exports[`Tracks UsersSaved.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "me/tracks",
    },
  ],
]
`;

exports[`Tracks UsersSaved.remove 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/tracks",
    },
  ],
]
`;

exports[`Tracks UsersSaved.save 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/tracks",
    },
  ],
]
`;

exports[`Users CheckFollows.artists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "artist",
      },
      "url": "me/following/contains",
    },
  ],
]
`;

exports[`Users CheckFollows.playlist 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "playlists/id1/followers/contains",
    },
  ],
]
`;

exports[`Users CheckFollows.users 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "user",
      },
      "url": "me/following/contains",
    },
  ],
]
`;

exports[`Users Follow.artists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "artist",
      },
      "url": "me/following",
    },
  ],
]
`;

exports[`Users Follow.playlist 1`] = `
[
  [
    {
      "data": {
        "public": true,
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "url": "playlists/id1/followers",
    },
  ],
]
`;

exports[`Users Follow.users 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "user",
      },
      "url": "me/following",
    },
  ],
]
`;

exports[`Users FollowedArtists.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "after": "id1",
        "limit": 1,
        "type": "artist",
      },
      "url": "me/following",
    },
  ],
]
`;

exports[`Users Profile.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "users/id1",
    },
  ],
]
`;

exports[`Users TopTracks.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "me/top/tracks",
    },
  ],
]
`;

exports[`Users Unfollow.artists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "artist",
      },
      "url": "me/following",
    },
  ],
]
`;

exports[`Users Unfollow.playlist 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "url": "playlists/id1/followers",
    },
  ],
]
`;

exports[`Users Unfollow.users 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "user",
      },
      "url": "me/following",
    },
  ],
]
`;

exports[`Users getCurrentUsersProfile 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "me",
    },
  ],
]
`;

exports[`Users getUsersTopArtists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "me/top/artists",
    },
  ],
]
`;
